@@ -124,7 +124,7 @@ public class GeoAngle extends GeoNumeric implements AngleProperties {
 	 * @return List of decoration types.
 	 */
 	public static final Integer[] getDecoTypes() {
-		Integer[] ret = { new Integer(GeoElement.DECORATION_NONE),
+		Integer[] ret = { Integer.valueOf(GeoElement.DECORATION_NONE),
 				Integer.valueOf(GeoElement.DECORATION_ANGLE_TWO_ARCS),
 				Integer.valueOf(GeoElement.DECORATION_ANGLE_THREE_ARCS),
 				Integer.valueOf(GeoElement.DECORATION_ANGLE_ONE_TICK),
