@@ -410,7 +410,7 @@ public class RestrictedFileSystemView extends FileSystemView {
 		int i = 2;
 		while (newFolder.exists() && (i < 100)) {
 			newFolder = createFileObject(containingDir, MessageFormat.format(
-					newFolderString, new Object[] { new Integer(i) }));
+					newFolderString, new Object[] { Integer.valueOf(i) }));
 			i++;
 		}
 
